# VI

./: 0_1.ppm  16Box_HierarchicalGrid_512x512_16spp_40.998secs.ppm  16Box_TriangleBVH_512x512_16spp_22.582secs.ppm  1Box_HierarchicalGrid_512x512_16spp_7.019secs.ppm  1Box_HierarchicalGrid_512x512_16spp_7.497secs.ppm  1Box_HierarchicalGrid_512x512_16spp_9.382secs.ppm  1Box_TriangleBVH_512x512_16spp_6.239secs.ppm  4Box_HierarchicalGrid_512x512_16spp_16.037secs.ppm  4Box_NoAccel_512x512_16spp_13.786secs.ppm  Accel16_99.197s.ppm  HierarchicalGrid_1Box_512x512_16spp_7.280secs.ppm  Makefile  MyImage.ppm  MyImage10.ppm  MyImage11.ppm  MyImage12.ppm  MyImage13.ppm  MyImage14.ppm  MyImage15.ppm  MyImage16.ppm  MyImage18.ppm  MyImage19.ppm  MyImage2.ppm  MyImage28.ppm  MyImage3.ppm  MyImage4.ppm  MyImage5.ppm  MyImage6.ppm  MyImage68.ppm  MyImage7.ppm  MyImage8.ppm  MyImage9.ppm  MyImage92.ppm  MyImage_16.ppm  PathTraceInsano.ppm  PathTracer128.ppm  PathTracer16.ppm  PrimitiveBVH_4Box_512x512_16spp_13.795secs.ppm  Standard_1.ppm  Standard_10.ppm  (+41 more)
VI-RT/: CMakeLists.txt  main.cpp
VI-RT/3DSortingStruct/: AccelStruct.cpp  AccelStruct.hpp  BVH.cpp  BVH.hpp  HierarchicalGrid.cpp  HierarchicalGrid.hpp
VI-RT/Camera/: perspective.cpp  perspective.hpp
VI-RT/Image/: ImagePPM.cpp  ImagePPM.hpp  image.hpp
VI-RT/Light/: AreaLight.hpp
VI-RT/Primitive/: BB.hpp
VI-RT/Rays/: intersection.hpp  ray.hpp
VI-RT/Renderer/: StandardRenderer.cpp  WindowRenderer.cpp  WindowRenderer.hpp
VI-RT/Scene/: scene.cpp  scene.hpp
VI-RT/Shader/: AmbientShader.cpp  DistributedShader.cpp  shader.hpp  (+3 more)
(+9 files in other folders)
